css/cookie.css
#cookie_bar {
  width: calc(100% - 10px);
  align: center;
  z-index: 999999999;
  position: fixed;
  left: 0;
  bottom: 0;
  background: black;
  color: white;
  font-size: 14px;
  margin: 5px;
  padding: 0px;
  font-family: sans-serif;
  line-height: 20px;
  box-sizing: border-box;
  border-radius: 16px;
  display: flex;
  flex-flow: row wrap;
  align-items: center;
}
#cookie_bar_text {
  margin: 0px 15px;
  padding: 5px 0px;
}
#cookie_bar_buttons {
  padding: 5px 5px;
  flex-grow: 1;
}

#cookie_settings {
  width: 100%;
  height: 100vh;
  max-width: 360px;
  z-index: 999999999;
  position: fixed;
  left: 0;
  top: 0;
  background: white;
  box-shadow: 5px 0px 10px lightgrey;
  font-size: 14px;
  padding: 5px 2% 10px 2%;
  font-family: sans-serif;
  line-height: 24px;
  box-sizing: border-box;
  overflow-y: auto;
  display: inline-block;
  visibility: hidden;
}

button {
  background: white;
  border: 2px solid black;
  border-radius: 45px;
  padding: 0px 8px;
  margin: 1px 1px;
  outline: none;
}
button:hover {
  border: 3px solid black;
  margin: 0px;
}
button:active {
  background: black;
  color: white;
}
.inverseButton {
  background: black;
  border: 2px solid white;
  color: white;
}
.inverseButton:hover {
  border: 3px solid white;
  margin: 0px;
}
.inverseButton:active {
  background: white;
  color: black;
}

.rightAlign {
  left: auto;
  right: 0;
  float: right;
}

.fadeOut {
  visibility: hidden;
  opacity: 0;
  transition: visibility 0s linear 300ms, opacity 300ms;
}

